<resources>
    <string name="app_name">BCodeGen</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">register</string>
    <string name="password1">Password</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="email1">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login1">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="bar_code_generator">Bar Code Generator</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="bar_code_generator1">Bar Code Generator</string>
    <string name="logo">string/logo_description</string>
    <string name="logo1">/logo_description</string>
    <string name="print_barcode">Print Barcode</string>
    <string name="share_barcode">Share Barcode</string>
    <string name="save_barcode">Save Barcode</string>
    <string name="generate_barcode">Generate Barcode</string>
    <string name="enter_text_to_generate_barcode">Enter Text to Generate Barcode</string>
    <string name="generated_barcode">Generated Barcode</string>
    <string name="download_barcode">download barcode</string>
    <string name="email_hint">email_hint</string>
    <string name="password_hint">password</string>
    <string name="login_here">Login Here</string>
    <string name="welcome">Welcome</string>
    <string name="email2">EMAIL</string>
    <string name="welcome_here_and_register">Welcome Here And Register</string>
    <string name="welcome_and_register_here">Welcome And Register Here</string>
    <string name="scan_barcode">scan barcode</string>
    <string name="close">Close</string>
    <string name="scan_barcode1">Scan Barcode</string>
    <string name="scan_from_image">Scan from Image</string>
    <string name="timestamp">Timestamp</string>
    <string name="barcode_data">Barcode Data</string>
</resources>