<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:padding="16dp">

    <!-- Header Text -->
    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bar_code_generator"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp" />
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/round_image"
        android:clipToOutline="true"
        android:src="@drawable/logoo"
        android:contentDescription="@string/logo1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="0dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/registerNowTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_and_register_here"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="50dp" />

    <!-- First Name -->
    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="First Name"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="13dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>


    <!-- Second Name -->
    <EditText
        android:id="@+id/secondNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Second Name"
        android:hint="@string/second_name"
        android:inputType="text"
        android:padding="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="13dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <!-- Last Name -->
    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Last Name"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="13dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toBottomOf="@id/firstNameEditText"/>

    <!-- Email -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Email Address"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="13dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toBottomOf="@id/lastNameEditText"/>

    <!-- Password -->

    <!-- Confirm Password -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="Password"
        android:hint="@string/enter_your_password"
        android:padding="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="13dp"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/confirm_password"
        android:padding="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="13dp"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"/>

    <!-- Register Button -->

    <!-- Login Text and Button -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/register_now"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/alreadyHaveAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login1"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>
